# webooks_back-joongobooks_v2

./: .flake8  .gitignore  README.md  pyproject.toml
accounts/: factories.py  managers.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
books/: factories.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_favorite_book.py
books/tests/: test_models.py  test_serializers.py
books/tests/views/: test_book_crud.py  test_favorite.py
chat/: consumers.py  factories.py  models.py  routing.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/tests/: chat_test_models.py  chat_test_serializers.py
chat/tests/views/: chat_test_chat_room.py  chat_test_message.py
config/: asgi.py  settings.py  urls.py
github-ci-setup/.github/: pull_request_template.md
github-ci-setup/.github/workflows/: django-ci.yml  pr-checks.yml
